--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,13 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.11.16",
+    "dotenv>=0.9.9",
     "websockets>=15.0.1",
+]
+
+[dependency-groups]
+dev = [
+    "langchain-openai>=0.3.12",
+    "langgraph>=0.3.30",
+    "pytest>=8.3.5",
 ]
