--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.11.16",
+    "click>=8.1.8",
     "dotenv>=0.9.9",
     "websockets>=15.0.1",
 ]
