feat: 添加新的工具函数和示例代码
添加了 `run_async_safely` 和 `get_secret_from_env` 工具函数，用于安全运行异步协程和从环境变量获取密钥。同时新增了 `langgra

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,29 @@
 [project]
 name = "gohumanloop"
 version = "0.1.0"
-description = "Add your description here"
+description = "Perfecting AI workflows with human intelligence"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "aiohttp>=3.11.16",
     "click>=8.1.8",
     "dotenv>=0.9.9",
-    "websockets>=15.0.1",
 ]
+
+[project.urls]
+repository = "https://github.com/ptonlix/gohumanloop"
+
+[project.scripts]
+ghl = "gohumanloop.cli.main:cli"
+gohumanloop = "gohumanloop.cli.main:cli"
+
+[project.optional-dependencies]
+email = [
+    "imapclient>=3.0.1",
+]
+
+[tool.setuptools]
+packages = ["gohumanloop"]
 
 [dependency-groups]
 dev = [
