--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ packages = ["gohumanloop"]
 
 [dependency-groups]
 dev = [
+    "fastapi>=0.115.12",
     "langchain-openai>=0.3.12",
     "langgraph>=0.3.30",
     "pytest>=8.3.5",
+    "uvicorn>=0.34.2",
 ]
