--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,15 @@ email = [
 [tool.setuptools]
 packages = ["gohumanloop"]
 
+[tool.pytest.ini_options]
+asyncio_default_fixture_loop_scope = "function"
+
 [dependency-groups]
 dev = [
     "fastapi>=0.115.12",
     "langchain-openai>=0.3.12",
     "langgraph>=0.3.30",
     "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "uvicorn>=0.34.2",
 ]
