--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dev = [
     "fastapi>=0.115.12",
     "langchain-openai>=0.3.12",
     "langgraph>=0.3.30",
+    "pre-commit>=4.2.0",
     "pytest>=8.3.5",
     "pytest-asyncio>=0.26.0",
     "uvicorn>=0.34.2",
