--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ apiservices= [
     "fastapi>=0.115.12",
     "uvicorn>=0.34.2"
 ]
+agentops = [
+    "agentops>=0.4.12",
+]
 
 [build-system]
 requires = ["setuptools>=61.0.0", "wheel"]
