chore: 更新.gitignore和README.md文件
在.gitignore中添加.DS_Store文件忽略规则，防止Mac系统文件被提交
更新README.md中的架构图URL链接

--- a/.gitignore
+++ b/.gitignore
@@ -160,6 +160,7 @@ cython_debug/
 
 # Vscode config files
 .vscode/
+.DS_Store
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
